<resources>
    <string name="app_name">Iti Food</string>
    <string name="get_start">Get Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="regeister">Regeister</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="have_an_account">have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password2">Forgot Password!</string>
    <string name="send_otp">Send OTP</string>
    <string name="new_password">New Password</string>
    <string name="please_don_t_forget_this_one_too">Please don’t forget this one too</string>
    <string name="we_will_send_code_to_your_email">We will send code to your email</string>
    <string name="next">Next</string>
    <string name="contact">contact</string>
    <string name="contact_number">contact_number</string>
    <string name="find">Find us on social media</string>
    <string name="email_address">Email Address</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="terms_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.t labore et dolore magna.Lorem ipsum ..Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.Lorem ipsum ..</string>
    <string name="terms">Terms and Conditions</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="let_s_cooking">Let’s Cooking</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="edit_password">Edit Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="eidt_password">Eidt password</string>
</resources>